<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Libremet</string>
    <string name="action_new">New</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_tabs">Weather</string>
    <string name="abrir_prediccion">Weather</string>
    <string name="actualizar">Update</string>
    <string name="espere">Wait</string>
    <string name="descargando_prediccion">Downloading weather, will be shown in a few moments</string>
    <string name="prediccion_actual">Current</string>
    <string name="prediccion_3horas">3 Hours</string>
    <string name="prediccion_14dias">14 Days</string>
    <string name="texto_ejemplo_graphical_layout">Text for test</string>
    <string name="imagen_prediccion">Weather image</string>
    <string name="tempmin">Min</string>
    <string name="tempmax">Max</string>
    <string name="presion">Pressure</string>
    <string name="humedad">Humidity</string>
    <string name="viento">Wind</string>
    <string name="contextual_titulo">Options</string>
    <string name="contextual_ver">See weather</string>
    <string name="contextual_eliminar">Remove</string>
    <string name="dialog_confirmacion_titulo">Are you sure?</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_search">City look up</string>
    <string name="buscar_filtro">Insert city\'s name</string>
    <string name="buscar_imgbuscar">Search</string>
    <string name="acercade_titulo">About&#8230;</string>
    <string name="acercade_msg">App developed by Javier Caballero under the \"Academic Free License v.3.0\"\n\nThe OpenWeatherMap service provides free weather data and forecast API suitable for any cartographic services like web and smartphones applications. Ideology is inspired by OpenStreetMap and Wikipedia that make information free and available for everybody. OpenWeatherMap provides wide range of weather data such as map with current weather, week forecast, precipitation, wind, clouds, data from weather Stations and many others. Weather data is received from global Meteorological broadcast services and more than 40 000 weather stations.\n\nApp icon by Martz90\nhttp://www.iconarchive.com/show/circle-icons-by-martz90/weather-icon.html\nLicense:\nCC Attribution-Noncommercial-No Derivate 3.0</string>

</resources>
