<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutWidget"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin" >
    
    <TextView
        android:id="@+id/temp"
        style="@style/tempStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:gravity="center"
        android:text="@string/texto_ejemplo_graphical_layout" />
    
    <ImageView
        android:id="@+id/condIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cityText"
        android:layout_toRightOf="@+id/temp"
        android:contentDescription="@string/imagen_prediccion"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:src="@drawable/nubes" />

    <TextView
        android:id="@+id/cityText"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/condIcon"
        android:text="@string/texto_ejemplo_graphical_layout" />

    <TextView
        android:id="@+id/condDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cityText"
        android:layout_below="@+id/cityText"
        android:text="@string/texto_ejemplo_graphical_layout" />
    
    <TextView
        android:id="@+id/tempMinLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/temp"
        android:layout_marginTop="10dp"
        android:text="@string/tempmin" />
    
    <TextView
        android:id="@+id/tempMin"
        style="@style/tempMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tempMinLab"
        android:layout_alignBaseline="@id/tempMinLab"
        android:text="@string/texto_ejemplo_graphical_layout" />
    
    <TextView
        android:id="@+id/tempMaxLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tempMin"
        android:layout_alignBaseline="@id/tempMinLab"
        android:layout_marginLeft="5dp"
        android:text="@string/tempmax" />
    
    <TextView
        android:id="@+id/tempMax"
        style="@style/tempMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tempMaxLab"
        android:layout_alignBaseline="@id/tempMinLab"
        android:text="@string/texto_ejemplo_graphical_layout" />

    <TextView
        android:id="@+id/pressLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tempMinLab"
        android:text="@string/presion" />

    <TextView
        android:id="@+id/press"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/pressLab"
        android:layout_toRightOf="@id/pressLab" />

    <TextView
        android:id="@+id/humLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pressLab"
        android:text="@string/humedad" />

    <TextView
        android:id="@+id/hum"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/humLab"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/humLab" />

    <TextView
        android:id="@+id/windLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/humLab"
        android:text="@string/viento" />

    <TextView
        android:id="@+id/windSpeed"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/windLab" />

    <TextView
        android:id="@+id/windDeg"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/windSpeed" />

</RelativeLayout>