<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin" >

    <TextView
        android:id="@+id/datetimePredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/texto_ejemplo_graphical_layout" />

    <ImageView
        android:id="@+id/condIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/datetimePredText"
        android:contentDescription="@string/imagen_prediccion"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:src="@drawable/nubes" />

    <!-- <TextView
        android:id="@+id/condDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/condIcon"
        android:layout_below="@id/condIcon"
        android:text="TextView condDescr" /> -->

    <TextView
        android:id="@+id/pressLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/condIcon"
        android:layout_marginTop="10dp"
        android:text="@string/presion" />

    <TextView
        android:id="@+id/press"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/pressLab"
        android:layout_toRightOf="@id/pressLab"
        android:text="@string/texto_ejemplo_graphical_layout" />

    <TextView
        android:id="@+id/humLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pressLab"
        android:text="@string/humedad" />

    <TextView
        android:id="@+id/hum"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/humLab"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/humLab"
        android:text="@string/texto_ejemplo_graphical_layout" />

    <TextView
        android:id="@+id/windLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/humLab"
        android:text="@string/viento" />

    <TextView
        android:id="@+id/windSpeed"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/windLab"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/windLab"
        android:text="@string/texto_ejemplo_graphical_layout" />

    <TextView
        android:id="@+id/temp"
        style="@style/tempStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/condIcon"
        android:layout_alignLeft="@+id/hum"
        android:text="@string/texto_ejemplo_graphical_layout" />

</RelativeLayout>
